--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -5,6 +5,7 @@
 /*@import './base.css';*/
 
 #app {
+  min-width: 100%;
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
@@ -32,7 +33,7 @@ a,
   }
 
   #app {
-    display: grid;
+    display: flex;
     grid-template-columns: 1fr 1fr;
     padding: 0 2rem;
   }
